syntax = "proto3";

option java_package = "proto";
option java_multiple_files = true;

message InvitationEvent {
    int32 invitation_id = 1;
    string sender_name = 2;
    string message = 3;
}

message InvitationAcceptedEvent {
    int32 invitation_id = 1;
    int32 friend_id = 2;
    string friend_name =3;
}

message WsEvent {
    oneof event {
        InvitationEvent invitation = 1;
        InvitationAcceptedEvent invitation_accepted = 2;
    }
}